--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
 <!-- Write your HTML in this file -->
+<!Doctype HTML>
+<html>
+  
+  <head>
+    <a href="https://flatironschool.com">Flatiron School</a>
+  </head>
+  
+  <body>
+    
+  </body>
+  
+</html>
